# PatentlyPatent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
ai_docs/: design_resumable_mining.md  oss_selection.md  research_01_llm_tools.md  research_02_data_sources.md  research_03_cn_practice.md  research_04_skills_architecture.md  research_05_cn_patent_sources.md  research_agent_activity_stream.md  research_summary.md  v0.36_audit.md  zhihuiya_api.md
backend/: pyproject.toml  test_agent_sdk_real.py  test_agent_section.py
backend/app/: agent_interview.py  agent_sdk_spike.py  agent_section_demo.py  answer_router.py  budget.py  concurrency.py  config.py  db.py  disclosure_docx.py  disclosure_no34.py  file_extract.py  fixtures.py  llm.py  llm_fill.py  main.py  mining.py  models.py  patents_bq.py  plan_snapshot.py  research.py  run_archive.py  schemas.py  system_docs.py  zhihuiya.py
backend/app/routes/: admin.py  agent.py  auth.py  auth_cas.py  chat.py  disclosure.py  files.py  kb.py  projects.py  search.py
backend/benchmark/: load_test.py
backend/deploy/: nginx.snippet  patentlypatent.service
backend/tests/: conftest.py  test_agent_runs.py  test_auth_cas.py  test_e2e_full.py  test_happy_path.py
docs/: README.md  agent_sdk_spike.md  agent_vs_mining_compare.md  architecture_v0.16.md  deploy_runbook.md  hld.md  iteration_log.md  prd.md  prompt_cache_research.md  requirements_v2.md  test_strategy.md  user_guide.md
docs/archive/: architecture_v0.1.md  hld_v1.md  prd_v1.md  requirements.md  user_guide_v1.md
examples/: demo_invention.md
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/nginx/: patent.conf.snippet
frontend/scripts/: deploy.sh
frontend/src/: App.vue  main.ts
frontend/tests/: setup.ts
pk/: cli.py  pipeline.py
pk/drafting/: claims_dep.py  claims_indep.py  spec.py
pk/llm/: client.py
pk/mining/: effects.py  generalize.py  portfolio.py  problem_tree.py
pk/oa/: amend.py  (+3 more)
tests/: conftest.py  test_drafting.py  test_mining.py  test_oa.py  test_search_pipeline.py  test_search_query.py
(+110 files in other folders)
